--- a/botconfig.json
+++ b/botconfig.json
@@ -1,4 +1,4 @@
 {
-    "token": "NTI4NDczMjQ4MzIxNzY1Mzg5.D2Vcvg.zgJY7D3EiOFjJRAAgRO9jzndaDA",
+    "token": "NTI4NDczMjQ4MzIxNzY1Mzg5.D2Vklg.XNlletK8gdDFnZgZJc_kMQfPMGo",
     "prefix": "!",
 }
